--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-midnight
+title: Welcome to the LiquidShell homepage!
+description: This is a personal lifestyle blog and a peek into who I am...
